# backend/main.go
@@ -45,6 +45,8 @@ func main() {
 
 	// Users route
 	r.GET("/users", middleware.RequireAuth(true), controllers.GetUsers)
+	r.PATCH("/users/:id", middleware.RequireAuth(true), controllers.UpdateRole)
+	r.DELETE("/users/:id", middleware.RequireAuth(true), controllers.DeleteUser)
 
 	// Hike routes
 	r.POST("/hikes", controllers.CreateHike)
